plugins {
	id 'org.springframework.boot' version '3.4.8'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'java'
	id "org.sonarqube" version "5.1.0.4882"
	id "jacoco"
}

compileJava {
	options.compilerArgs << '--add-exports=java.base/com.sun.crypto.provider=ALL-UNNAMED'
}

group = 'com.spin'
version = '0.0.1-SNAPSHOT'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

ext {
	set('springCloudVersion', "2024.0.0")
}

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
	maven { url "https://plugins.gradle.org/m2/" }
}

test {
	useJUnitPlatform()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation "org.springframework.boot:spring-boot-starter-security"
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'com.google.code.gson:gson:2.14.0'
	implementation 'commons-io:commons-io:2.21.0'
	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:2.1.2'
	implementation 'com.github.ulisesbocchio:jasypt-spring-boot:2.1.2'
	implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
	implementation 'com.oracle.database.jdbc:ojdbc11:23.26.2.0.0'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
	compileOnly 'org.projectlombok:lombok:1.18.38'
	annotationProcessor 'org.projectlombok:lombok:1.18.38'

	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
	testImplementation 'org.junit.platform:junit-platform-commons:1.10.0'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.12.0'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}